# opengl_tutorial

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  Doxyfile  README.md  vcpkg-configuration.json  vcpkg.json
example/: ibl.cpp  pbr.cpp  pbr_texture.cpp  ssao.cpp
include/glex/: buffer.h  common.h  context.h  framebuffer.h  image.h  mesh.h  model.h  program.h  shader.h  shadow_map.h  texture.h  vertex_layout.h
shader/: blur_5x5.fs  brdf_lookup.fs  brdf_lookup.vs  defer_geo.fs  defer_geo.vs  defer_light.fs  defer_light.vs  diffuse_irradiance.fs  env_map.fs  env_map.vs  gamma.fs  grass.fs  grass.vs  invert.fs  lighting.fs  lighting.vs  lighting_shadow.fs  lighting_shadow.vs  normal.fs  normal.vs  pbr.fs  pbr.vs  pbr_texture.fs  pbr_texture.vs  pbr_with_ibl.fs  per_vertex_color.fs  per_vertex_color.vs  prefiltered_light.fs  simple.fs  simple.vs  skybox.fs  skybox.vs  skybox_hdr.fs  skybox_hdr.vs  spherical_map.fs  spherical_map.vs  ssao.fs  texture.fs  texture.vs  transform.fs  (+1 more)
src/: buffer.cpp  common.cpp  context.cpp  framebuffer.cpp  image.cpp  main.cpp  mesh.cpp  model.cpp  program.cpp  shader.cpp  shadow_map.cpp  texture.cpp  vertex_layout.cpp
